--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/lodash": "^4.14.194",
     "prisma": "^4.13.0"
   }
